<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:windowActionBarOverlay="true">
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/big_spacing">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/civ_head"
                            android:layout_width="@dimen/head_size"
                            android:layout_height="@dimen/head_size"
                            android:src="@drawable/head_default"/>
                        <LinearLayout
                            android:layout_toRightOf="@id/civ_head"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/medium_spacing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/tv_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/medium_text"
                                android:textStyle="bold"
                                android:textColor="@color/accent_white"
                                android:text="Nina Mcintire"/>
                            <TextView
                                android:id="@+id/tv_position"
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/medium_text"
                                android:textColor="@color/accent_white"
                                android:text="Software Engineer"/>
                        </LinearLayout>
                        <ImageView
                            android:layout_width="@dimen/arrow_size"
                            android:layout_height="@dimen/arrow_size"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/ic_edit"/>
                    </RelativeLayout>
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="0dp"
                        android:layout_marginBottom="@dimen/small_spacing">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_card_item"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/medium_spacing">
                            <ImageView
                                android:layout_width="@dimen/item_icon_size"
                                android:layout_height="@dimen/item_icon_size"
                                app:srcCompat="@drawable/ic_phone"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sub_medium_text"
                                android:text="累计呼叫"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textStyle="bold"
                                android:textSize="@dimen/medium_text"
                                android:text="1140"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_card_item"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/medium_spacing">
                            <ImageView
                                android:layout_width="@dimen/item_icon_size"
                                android:layout_height="@dimen/item_icon_size"
                                app:srcCompat="@drawable/ic_call_"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sub_medium_text"
                                android:text="累计收入"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textStyle="bold"
                                android:textSize="@dimen/medium_text"
                                android:text="64.0"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_card_item"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/medium_spacing">
                            <ImageView
                                android:layout_width="@dimen/item_icon_size"
                                android:layout_height="@dimen/item_icon_size"
                                app:srcCompat="@drawable/ic_pay"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sub_medium_text"
                                android:text="待结算"/>
                            <TextView
                                android:id="@+id/tv_wait_balance"
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textStyle="bold"
                                android:textSize="@dimen/medium_text"
                                android:text="75.0"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_card_item"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/medium_spacing">
                            <ImageView
                                android:layout_width="@dimen/item_icon_size"
                                android:layout_height="@dimen/item_icon_size"
                                app:srcCompat="@drawable/ic_thumb"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sub_medium_text"
                                android:text="评分"/>
                            <TextView
                                android:layout_marginTop="@dimen/s_small_spacing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textStyle="bold"
                                android:textSize="@dimen/medium_text"
                                android:text="92.0"/>
                        </LinearLayout>


                    </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="0dp"
                        android:layout_marginBottom="@dimen/small_spacing">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                        <com.lvqingyang.callcustomserver.view.CardItem
                            android:id="@+id/ci_wallet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_wallet"
                            app:name="@string/wallet"
                            app:showHint="true"/>

                            <com.lvqingyang.callcustomserver.view.CardItem
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:icon="@drawable/ic_message"
                                app:name="@string/message"
                                app:showHint="true"/>

                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="0dp"
                        android:layout_marginBottom="@dimen/small_spacing">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.lvqingyang.callcustomserver.view.CardItem
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_service"
                            app:name="@string/service"/>
                        <com.lvqingyang.callcustomserver.view.CardItem
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_feedback"
                            app:name="@string/feedback"/>
                        <com.lvqingyang.callcustomserver.view.CardItem
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_share_firend"
                            app:name="@string/share_firend"/>
                        <com.lvqingyang.callcustomserver.view.CardItem
                            android:id="@+id/ci_exit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_exit"
                            app:name="退出登录"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>